--- a/tools/creativity/forlater-countdown.html
+++ b/tools/creativity/forlater-countdown.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ForLater Countdown | Ultimatrix</title>
-  <meta name="description" content="Create a countdown timer to any future date and time. Perfect for events, launches, holidays, and goals!" />
+  <meta name="description"
+    content="Create a countdown timer to any future date and time. Perfect for events, launches, holidays, and goals!" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
   <script src="/js/script.js"></script>
@@ -42,7 +44,7 @@
       background: #ffffff;
       padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.15);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
       max-width: 500px;
       width: 100%;
       text-align: center;
@@ -60,7 +62,8 @@
       margin-bottom: 20px;
     }
 
-    .tool-description, .tool-howto {
+    .tool-description,
+    .tool-howto {
       background: #f8f9fa;
       border-radius: 10px;
       padding: 15px 18px;
@@ -69,7 +72,9 @@
       color: #333;
       text-align: left;
     }
-    .tool-description strong, .tool-howto strong {
+
+    .tool-description strong,
+    .tool-howto strong {
       display: block;
       margin-bottom: 6px;
       color: #2193b0;
@@ -129,22 +134,14 @@
     }
   </style>
 </head>
-<body>
-  <header>
-    <div class="header-container">
-      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/news.html">News</a></li>
-          <li><a href="/blogs/blogs.html">Blogs</a></li>
-          <li><a href="/tools/tools.html">Tools</a></li>
-        </ul>
-      </nav>
-      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
-    </div>
-  </header>
 
+<body>
+  <div id="header"></div>
+  <script>
+    fetch('/header.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('header').innerHTML = data);
+  </script>
   <div class="side-buttons">
   </div>
 
@@ -155,7 +152,8 @@
       <div class="tool-description">
         <strong>About Countdown Timer</strong>
         <p>
-          Create a countdown timer to any future date and time with this free <b>Countdown Timer</b> tool. Perfect for events, launches, holidays, and goals.
+          Create a countdown timer to any future date and time with this free <b>Countdown Timer</b> tool. Perfect for
+          events, launches, holidays, and goals.
         </p>
       </div>
       <div class="tool-howto">
@@ -181,16 +179,6 @@
       </div>
     </div>
   </div>
-
-  <footer>
-    <div>
-      <a href="/tools/">All Tools</a> |
-      <a href="/privacy.html">Privacy</a> |
-      <a href="/terms.html">Terms</a> |
-      <a href="/contact.html">Contact</a>
-    </div>
-    <div>&copy; 2025 YourSiteName. Built with care and JavaScript ♥</div>
-  </footer>
 
   <script>
     const eventName = document.getElementById("eventName");
@@ -235,5 +223,12 @@
 
     [eventName, targetDate, targetTime].forEach(el => el.addEventListener("input", updateCountdown));
   </script>
+  <div id="footer"></div>
+  <script>
+    fetch('/footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer').innerHTML = data);
+  </script>
 </body>
+
 </html>
