--- a/tools/dateAndTime/clock.html
+++ b/tools/dateAndTime/clock.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Clock | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <script src="/js/script.js"></script>
-  <meta name="description" content="Beautiful fullscreen clock with ambient Unsplash background, dim toggle, fullscreen, ambient sound, and millisecond time updates." />
+  <meta name="description"
+    content="Beautiful fullscreen clock with ambient Unsplash background, dim toggle, fullscreen, ambient sound, and millisecond time updates." />
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
       height: 100%;
@@ -126,30 +129,42 @@
     }
 
     @media (max-width: 600px) {
-      .time-box { padding: 20px 30px; }
-      .day { font-size: 1.5rem; }
-      .date { font-size: 1rem; }
-      .time { font-size: 2.2rem; }
-      .ms { font-size: 1rem; }
-      .control { width: 36px; height: 36px; font-size: 1rem; }
+      .time-box {
+        padding: 20px 30px;
+      }
+
+      .day {
+        font-size: 1.5rem;
+      }
+
+      .date {
+        font-size: 1rem;
+      }
+
+      .time {
+        font-size: 2.2rem;
+      }
+
+      .ms {
+        font-size: 1rem;
+      }
+
+      .control {
+        width: 36px;
+        height: 36px;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
+
 <body>
-  <header>
-    <div class="header-container">
-      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/news.html">News</a></li>
-          <li><a href="/blogs/blogs.html">Blogs</a></li>
-          <li><a href="/tools/tools.html">Tools</a></li>
-        </ul>
-      </nav>
-      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
-    </div>
-  </header>
+  <div id="header"></div>
+  <script>
+    fetch('/header.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('header').innerHTML = data);
+  </script>
   <div class="overlay" id="overlay"></div>
 
   <div class="container">
@@ -229,5 +244,12 @@
       }
     });
   </script>
+  <div id="footer"></div>
+  <script>
+    fetch('/footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer').innerHTML = data);
+  </script>
 </body>
+
 </html>
