--- a/tools/dateAndTime/date-adder.html
+++ b/tools/dateAndTime/date-adder.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Date Adder | Ultimatrix</title>
-  <meta name="description" content="Add or subtract days, hours, and minutes from a selected date and time. Get the exact future or past datetime instantly." />
+  <meta name="description"
+    content="Add or subtract days, hours, and minutes from a selected date and time. Get the exact future or past datetime instantly." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
   <script src="/js/script.js"></script>
@@ -42,7 +44,7 @@
       background: #ffffff;
       padding: 30px;
       border-radius: 20px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.15);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
       max-width: 500px;
       width: 100%;
       text-align: center;
@@ -60,7 +62,8 @@
       margin-bottom: 20px;
     }
 
-    .tool-description, .tool-howto {
+    .tool-description,
+    .tool-howto {
       background: #f8f9fa;
       border-radius: 10px;
       padding: 15px 18px;
@@ -69,7 +72,9 @@
       color: #333;
       text-align: left;
     }
-    .tool-description strong, .tool-howto strong {
+
+    .tool-description strong,
+    .tool-howto strong {
       display: block;
       margin-bottom: 6px;
       color: #2193b0;
@@ -130,33 +135,24 @@
     }
   </style>
 </head>
+
 <body>
-  <header>
-    <div class="header-container">
-      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/news.html">News</a></li>
-          <li><a href="/blogs/blogs.html">Blogs</a></li>
-          <li><a href="/tools/tools.html">Tools</a></li>
-        </ul>
-      </nav>
-      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
-    </div>
-  </header>
-
-  <div class="side-buttons">
-  </div>
-
+  <div id="header"></div>
+  <script>
+    fetch('/header.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('header').innerHTML = data);
+  </script>
   <div class="tool-container">
     <div class="tool-box">
       <div class="title">Add or Subtract Date & Time</div>
-      <div class="intro">Select a date & time, enter how much to add or subtract, and get the new result instantly.</div>
+      <div class="intro">Select a date & time, enter how much to add or subtract, and get the new result instantly.
+      </div>
       <div class="tool-description">
         <strong>About Date Adder</strong>
         <p>
-          Add or subtract days, hours, and minutes from any date and time with this free <b>Date Adder</b> tool. Instantly calculate future or past dates for planning, scheduling, or deadlines.
+          Add or subtract days, hours, and minutes from any date and time with this free <b>Date Adder</b> tool.
+          Instantly calculate future or past dates for planning, scheduling, or deadlines.
         </p>
       </div>
       <div class="tool-howto">
@@ -190,16 +186,6 @@
     </div>
   </div>
 
-  <footer>
-    <div>
-      <a href="/tools/">All Tools</a> |
-      <a href="/privacy.html">Privacy</a> |
-      <a href="/terms.html">Terms</a> |
-      <a href="/contact.html">Contact</a>
-    </div>
-    <div>&copy; 2025 YourSiteName. Built with care and JavaScript ♥</div>
-  </footer>
-
   <script>
     const baseDate = document.getElementById("baseDate");
     const baseTime = document.getElementById("baseTime");
@@ -211,7 +197,7 @@
 
     const now = new Date();
     baseDate.value = now.toISOString().split("T")[0];
-    baseTime.value = now.toTimeString().slice(0,5);
+    baseTime.value = now.toTimeString().slice(0, 5);
 
     function calculateNewDateTime() {
       const dateVal = baseDate.value;
@@ -253,5 +239,12 @@
 
     calculateNewDateTime();
   </script>
+  <div id="footer"></div>
+  <script>
+    fetch('/footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer').innerHTML = data);
+  </script>
 </body>
+
 </html>
