--- a/tools/productivity/notepad.html
+++ b/tools/productivity/notepad.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notepad | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <script src="/js/script.js"></script>
-  <meta name="description" content="Free online notepad to write, save, and edit notes with word and character count. Switch to journal mode for a paper-like writing experience. Secure, fast, and private." />
+  <meta name="description"
+    content="Free online notepad to write, save, and edit notes with word and character count. Switch to journal mode for a paper-like writing experience. Secure, fast, and private." />
   <style>
     body {
       margin: 0;
@@ -133,7 +135,8 @@
       color: #333;
     }
 
-    .tool-description, .tool-howto {
+    .tool-description,
+    .tool-howto {
       background: #f8f9fa;
       border-radius: 10px;
       padding: 15px 18px;
@@ -142,7 +145,9 @@
       color: #333;
       text-align: left;
     }
-    .tool-description strong, .tool-howto strong {
+
+    .tool-description strong,
+    .tool-howto strong {
       display: block;
       margin-bottom: 6px;
       color: #2193b0;
@@ -163,30 +168,25 @@
     }
   </style>
 </head>
+
 <body>
-  <header>
-    <div class="header-container">
-      <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
-      <nav>
-        <ul>
-          <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/news/news.html">News</a></li>
-          <li><a href="/blogs/blogs.html">Blogs</a></li>
-          <li><a href="/tools/tools.html">Tools</a></li>
-        </ul>
-      </nav>
-      <button class="dark-toggle" onclick="toggleDarkMode()">🌓</button>
-    </div>
-  </header>
+  <div id="header"></div>
+  <script>
+    fetch('/header.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('header').innerHTML = data);
+  </script>
 
   <div class="notepad-container" id="notepadContainer">
     <div class="intro">
-      ✍️ This free <strong>online notepad</strong> lets you quickly write, save, and edit text directly in your browser. It works offline, auto-saves, and includes a journal-style writing mode for a more personal feel.
+      ✍️ This free <strong>online notepad</strong> lets you quickly write, save, and edit text directly in your browser.
+      It works offline, auto-saves, and includes a journal-style writing mode for a more personal feel.
     </div>
     <div class="tool-description">
       <strong>About Notepad</strong>
       <p>
-        Use this free <b>Online Notepad</b> to write, save, and edit notes instantly in your browser. Enjoy features like auto-save, word/character count, and a journal mode for distraction-free writing.
+        Use this free <b>Online Notepad</b> to write, save, and edit notes instantly in your browser. Enjoy features
+        like auto-save, word/character count, and a journal mode for distraction-free writing.
       </p>
     </div>
     <div class="tool-howto">
@@ -274,7 +274,7 @@
 
     // Download note
     function downloadNote() {
-      const title = titleEl.value.trim() || `note-${new Date().toISOString().slice(0,16).replace(/[:T]/g, '-')}`;
+      const title = titleEl.value.trim() || `note-${new Date().toISOString().slice(0, 16).replace(/[:T]/g, '-')}`;
       const text = `${titleEl.value.trim() ? 'Title: ' + titleEl.value + '\n\n' : ''}${bodyEl.value}`;
       const blob = new Blob([text], { type: 'text/plain' });
       const link = document.createElement('a');
@@ -299,26 +299,12 @@
     });
   </script>
 
+  <div id="footer"></div>
+  <script>
+    fetch('/footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer').innerHTML = data);
+  </script>
 </body>
-<footer class="footer">
-  <div class="footer-container">
-    <div class="footer-links">
-      <a href="/about-us.html">About Us</a>
-      <a href="/contact-us.html">Contact Us</a>
-      <a href="/privacy.html">Privacy</a>
-    </div>
-    <div class="footer-social">
-      <a href="https://twitter.com/" target="_blank" aria-label="Twitter">
-        <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M22.46 6c-.77.35-1.6.59-2.47.7a4.3 4.3 0 0 0 1.88-2.37c-.83.5-1.75.87-2.72 1.07A4.28 4.28 0 0 0 16.11 4c-2.37 0-4.29 1.92-4.29 4.29 0 .34.04.67.11.99C7.69 9.13 4.07 7.2 1.64 4.16c-.37.64-.58 1.38-.58 2.17 0 1.5.76 2.83 1.92 3.61-.71-.02-1.38-.22-1.97-.54v.05c0 2.1 1.5 3.85 3.5 4.25-.36.1-.74.16-1.13.16-.28 0-.54-.03-.8-.08.54 1.68 2.11 2.9 3.97 2.93A8.6 8.6 0 0 1 2 19.54c-.29 0-.57-.02-.85-.05A12.13 12.13 0 0 0 8.29 21c7.55 0 11.69-6.26 11.69-11.69 0-.18-.01-.36-.02-.54A8.18 8.18 0 0 0 24 4.59c-.77.34-1.6.58-2.47.7z"></path></svg>
-      </a>
-      <a href="https://facebook.com/" target="_blank" aria-label="Facebook">
-        <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35C.6 0 0 .6 0 1.326v21.348C0 23.4.6 24 1.326 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.4 24 24 23.4 24 22.674V1.326C24 .6 23.4 0 22.675 0"></path></svg>
-      </a>
-      <a href="https://instagram.com/" target="_blank" aria-label="Instagram">
-        <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.975.974 1.246 2.242 1.308 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.974.975-2.242 1.246-3.608 1.308-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.975-.974-1.246-2.242-1.308-3.608C2.175 15.647 2.163 15.267 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608C4.516 2.497 5.784 2.226 7.15 2.163 8.416 2.105 8.796 2.163 12 2.163zm0-2.163C8.741 0 8.332.013 7.052.072 5.771.131 4.659.346 3.678 1.327c-.98.98-1.196 2.093-1.255 3.374C2.013 5.741 2 6.151 2 12c0 5.849.013 6.259.072 7.539.059 1.281.275 2.394 1.255 3.374.981.981 2.093 1.196 3.374 1.255C8.741 23.987 9.151 24 12 24s3.259-.013 4.539-.072c1.281-.059 2.394-.274 3.374-1.255.981-.98 1.196-2.093 1.255-3.374.059-1.28.072-1.69.072-7.539 0-5.849-.013-6.259-.072-7.539-.059-1.281-.274-2.394-1.255-3.374-.98-.981-2.093-1.196-3.374-1.255C15.259.013 14.849 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm6.406-11.845a1.44 1.44 0 1 0 0 2.881 1.44 1.44 0 0 0 0-2.881z"></path></svg>
-      </a>
-    </div>
-    <div class="footer-copy">&copy; 2025 Ultimatrix. All rights reserved.</div>
-  </div>
-</footer>
+
 </html>
